[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upbit-api"
version = "0.1.0"
description = "Unofficial Python wrapper for the Upbit Open API (REST)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Seokhwan Cheon", email = "chaos314@email.com" },
]
keywords = ["upbit", "crypto", "exchange", "api", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/bitkini/upbit-api"
Repository = "https://github.com/bitkini/upbit-api"
Issues = "https://github.com/bitkini/upbit-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["upbit_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
